# Haptic_Ping

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.bak  README.md  event_detector.cpp  main.cpp  samplereceiver.cpp  samplereceiver.hpp
Piezo /: ReadMe.md  ads1115rpi.cpp  ads1115rpi.h  led_controller.cpp  led_controller.h
html/: CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  Icm20948driver_8cpp.html  Icm20948driver_8cpp_8o_8d.html  Icm20948driver_8cpp_8o_8d_source.html  Icm20948driver_8cpp__incl.dot  Icm20948driver_8cpp__incl.map  Icm20948driver_8cpp__incl.md5  Icm20948driver_8cpp_source.html  Icm20948driver_8hpp.html  Icm20948driver_8hpp__dep__incl.dot  Icm20948driver_8hpp__dep__incl.map  Icm20948driver_8hpp__dep__incl.md5  Icm20948driver_8hpp__incl.dot  Icm20948driver_8hpp__incl.map  Icm20948driver_8hpp__incl.md5  Icm20948driver_8hpp_source.html  ReadMe_8md.html  SwingCalibrator_8cpp.html  SwingCalibrator_8cpp_8o_8d.html  SwingCalibrator_8cpp_8o_8d_source.html  SwingCalibrator_8cpp__incl.dot  SwingCalibrator_8cpp__incl.map  SwingCalibrator_8cpp__incl.md5  SwingCalibrator_8cpp_source.html  SwingCalibrator_8hpp.html  SwingCalibrator_8hpp__dep__incl.dot  SwingCalibrator_8hpp__dep__incl.map  SwingCalibrator_8hpp__dep__incl.md5  SwingCalibrator_8hpp__incl.dot  SwingCalibrator_8hpp__incl.map  SwingCalibrator_8hpp__incl.md5  SwingCalibrator_8hpp_source.html  SwingDetector_8cpp.html  SwingDetector_8cpp_8o_8d.html  SwingDetector_8cpp_8o_8d_source.html  SwingDetector_8cpp__incl.dot  SwingDetector_8cpp__incl.map  SwingDetector_8cpp__incl.md5  SwingDetector_8cpp_source.html  (+417 more)
junk/IMU_swing_Nano/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imu_swing  main.cpp
junk/IMU_swing_Nano/IMUMaths_Swing/: IMUMaths_swingDetection.cpp  MadgwickAHRS.cpp  MadgwickAHRS.hpp
junk/IMU_swing_Nano/IMU_library/: CMakeLists.txt
junk/IMU_swing_Nano/IMU_swingLogic/: SwingProcessor.hpp
src/: CMakeLists.txt  main.cpp  rtes_main
src/libs/IMU/: CMakeLists.txt  Icm20948driver.cpp  Makefile  README.md  imureader.cpp
src/libs/IMU/Include/: Icm20948driver.hpp  i2c_mutex.hpp  imureader.hpp
src/libs/IMU_math/: CMakeLists.txt  Makefile  SwingCalibrator.cpp  SwingProcessor.cpp  positiondetector.cpp
src/libs/IMU_math/Include/: SwingCalibrator.hpp  SwingDetector.hpp  SwingProcessor.hpp  positiondetector.hpp
src/libs/LEDs/: CMakeLists.txt  Makefile  led_controller.cpp  ledcallback.cpp
src/libs/LEDs/Include/: led_controller.h  ledcallback.hpp
src/libs/Motor/: CMakeLists.txt  Makefile  README.md  swingfeedback.cpp
src/libs/Motor/Include/: rpi_pwm.h  swingfeedback.h
src/libs/Piezo/: Makefile  ReadMe.md  ads1115rpi.cpp
src/libs/Piezo/Include/: ads1115rpi.h  event_detector.h
(+405 files in other folders)
